# openai-agent-sdk

agent_tool_calling/: pyproject.toml
agent_tool_calling/src/agent_tool_calling/: __init__.py
agent_tool_calling/src/agent_tool_calling/assignment/: connection.py  main.py  tool.py
agent_tool_calling/src/agent_tool_calling/assignment_2/: main.py
mode-changer/: pyproject.toml
mode-changer/src/mode_changer/: __init__.py  main.py
session_memory_chatbot/: .gitignore  pyproject.toml
session_memory_chatbot/src/session_memory_chatbot/: __init__.py
session_memory_chatbot/src/session_memory_chatbot/assignment_1/: main.py
simple_agent/: .env  main.py  pyproject.toml
streaming_agent_clone/: .gitignore  pyproject.toml
streaming_agent_clone/src/streaming_agent_clone/assignment/: main.py
